# brim-examples

./: .gitignore  README.md  pyproject.toml
.github/workflows/: tests.yaml
docs/: api_reference.rst  conf.py  index.rst
examples/: pendulum_on_cart_swing_up.py
examples/rolling_disc/: main.py  model.py  optimize.py  plot.py  simulate.py
examples/rolling_disc_optimization/: README.md  model.py  optimize.py  plot.py
examples/whipple_bicycle_simulation/: README.md  initial_conditions.py  model.py  plot.py  simulate.py
examples/whipple_upper_rider/: initial_conditions.py  plot.py
examples/whipple_upper_rider_simulation/: README.md  initial_conditions.py  model.py  plot.py  simulate.py
src/brimopt/: __init__.py  data_manager.py  simulator.py
tests/: test_data_manager.py  test_rolling_disc_example.py  test_simulator.py
utilities/: __init__.py  simulator.py  utilities.py
